src/App.css
/* @import '../node_modules/@syncfusion/ej2-base/styles/material.css';
@import '../node_modules/@syncfusion/ej2-react-buttons/styles/material.css'; */

body{
  padding:0;
  color: rgba(0, 0, 0, 0.87);
  margin: 0;
  font-size: 0.875rem;
  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  background-color: #fafafa !important;
}

.App {
  text-align: center;
}


.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}
.rightSpacing{
  margin-right: 15px;
}
.leftMenu{
  position: absolute;
  width: 225px;
  left: 0;
  bottom: 0;
  top:70px;
}
.right{
  position: relative;
  margin-left:225px;
  margin-top: 10px;
  bottom: 0;
  right: 0;
  background-color: #fff;
  padding: 10px 15px;
}
.navbar-nav li{
  display: block;
  padding: 0 !important;
}
.navbar{
  position: relative !important;
  display: block !important;
  padding: 0 !important;
  width: 100% !important;
}
.navbar-nav{
  display: block !important;
}
.makeStyles-root-104, .MuiList-root{
  background-color: transparent !important;
}
.makeStyles-root-1{
  background-color: transparent !important;
  padding: 0 !important;
}
.MuiListItem-button:hover, .MuiListItem-root.Mui-selected{
  background-color: transparent !important;
}
.MuiListItem-button ul li a:hover {
  text-decoration: none;
  background-color: rgba(0, 0, 0, 0.04);
}
.MuiTypography-alignCenter{
  margin-bottom: 15px !important;
}
.MuiListItem-gutters{
  padding-right: 0 !important;
}
.MuiListItem-gutters ul{
  width: 100% !important;
  padding-left: 25px;
}
.MuiSvgIcon-root{
  margin-right: 15px !important;
}
.MuiListItemIcon-root .MuiSvgIcon-root{
  margin-right: 0 !important;
}

